Revision history for Perl extension Starch.

{{$NEXT}}

0.03 2015-07-20

 - Better Carp handling by setting Starch modules as Internal so that
   the caller information ends up in the user's code.
 - Move state ID validation up to the Manager so it is easier for
   integration libraries to validate the ID.
 - Lots of documentation re-jiggery (still not 100% satisfied).

0.02 2015-07-16

 - Remove all uses of DEMOLISH, they were causing race conditions in
   some cases during global destruction.  Good by LogUnsaved and AutoSave
   plugins.  :(
 - Fix Type::Tiny union constraints sometimes failing on Perl < 5.14.

0.01 2015-07-16

 - First version.
