@@ -2,6 +2,8 @@ Revision history for Perl extension Starch.
 
 {{$NEXT}}
 
+ - Update state's in_store if the store did not find any data.
+
 0.03 2015-07-20
 
  - Better Carp handling by setting Starch modules as Internal so that
